[package]
name = "rtt-reader"
version = "0.4.0"
edition = "2021"
authors = ["Jon Lamb"]
license = "MIT OR Apache-2.0"
description = "Write RTT data from target to a file"
repository = "https://github.com/jonlamb-gh/rtt-reader"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#probe-rs = "0.24"
probe-rs = { git = "https://github.com/auxoncorp/probe-rs.git", branch = "s32k3xx" }
goblin = "0.8"
clap = { version = "4.5", features = ["derive", "env", "color"] }
clap-num = "1.1"
humantime = "2"
human_bytes = "0.4"
simple_moving_average = "1.0"
ctrlc = { version = "3.4", features = ["termination"] }

[profile.release]
strip="debuginfo"
